--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
     <section class="content">
 
       <h3>Contact</h3>
-      <p>
-        email: cctvallstars@gmail.com
+      <p>Email:<br />
+        cctvallstars@gmail.com
       </p>
 
       <p>
