new style and logo try

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
 
   <div class="wrapper">
+
+    <section class="menu">
+      <nav>
+        <a href="index.hmtl">Home</a>
+        <a href="video.html">Video</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section>    
+
     <section class="content">
       <p>
         Eddy Allen and the CCTV Allstars International collective have been playing around world since 2006. They have toured in, UK, Germany, Czech Republic, Ireland, Holland, Austria, Italy, France, Spain, Mexico, USA, Belgium, The Gambia and Brazil.
