--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <section class="menu">
       <nav>
-        <a href="index.hmtl">Home</a>
+        <a href="index.html">Home</a>
         <a href="video.html">Video</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -25,7 +25,7 @@
         Eddy Allen - World Adventurer, Composer and Musician - came up with the concept of having his own musical collective. Where by this extended family of musicians rotate around Eddy's somtimes unconventional gigging schedule.
       </p> 
       <p>
-        The members of this international crew only grow in numbers as the guys explore new scenes and avenues of music and culture. Eddy is now based him self in Belgium where is working with some of the guys from Black Mango band. Who are all top musicians of the Belgium music circuit.
+        The members of this international crew only grow in numbers as the guys explore new scenes and avenues of music and culture. Eddy has now based him self in Belgium where is working with some of the guys from Black Mango band, who are all top musicians of the Belgium music circuit.
       </p>
 
       <p>
