--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
 
   <div class="wrapper">
 
+    <section class="menu">
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="video.html">Video</a>
+        <a href="shows.html">Shows</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section> 
+
     <section class="content">
 
       <h3>Contact</h3>
