--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="video.html">Video</a>
+        <a href="shows.html">Shows</a>
         <a href="contact.html">Contact</a>
       </nav>
     </section>    
@@ -48,7 +49,7 @@
       </p> 
 
       <p>
-        Eddy Allen and the CCTV Allstars Collective are touring the EU untill the end of the year 2014. Coming are gigs in Belgium, Germany, Holland, Czech Republic, France the UK.
+        Eddy Allen and the CCTV Allstars Collective are touring the EU until the end of the year 2014 with upcoming gigs in Belgium, Germany, Holland, Czech Republic, France the UK.
       </p>
     </section>
   </div><!-- wrapper END -->
