--- a/video.html
+++ b/video.html
@@ -8,6 +8,16 @@
 <body>
 
   <div class="wrapper">
+
+    <section class="menu">
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="video.html">Video</a>
+        <a href="shows.html">Shows</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section> 
+    
     <section class="content">
       <h3>Clips</h3>
 
