--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         They are:
       </p>
       <ul>
-        <li>Toni Vitacolnna - Drums</li>
+        <li>Toni Vitacolonna - Drums</li>
         <li>Peter Delannoye - Trombone</li>
         <li>Sam Joris - Trumpet</li>
         <li>Joppe Bestevaar - Baritone Sax</li>
