revamping design and uploading content and new pages

--- a/shows.html
+++ b/shows.html
@@ -4,8 +4,29 @@
   <meta charset="UTF-8">
   <title>CCTV ALLSTARS</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 </head>
 <body>
+
+  <section class="social">
+
+    <a href="https://twitter.com/cctvallstars" title="twitter">
+      <i class="fa fa-twitter fa-4x"></i>
+    </a>
+    <a href="https://www.facebook.com/pages/CCTV-Allstars/56434708600?fref=ts" title="facebook">
+      <i class="fa fa-facebook-square fa-4x"></i>
+    </a>
+    <a href="https://www.youtube.com/channel/UCTKWpROglhDnL9cQNt6dhcA">
+      <i class="fa fa-youtube-square fa-4x"></i>
+    </a>
+    <a href="https://soundcloud.com/cctvallstars">
+      <i class="fa fa-soundcloud fa-4x"></i>
+    </a>
+    <a href="https://itunes.apple.com/us/artist/cctv-allstars/id470810963">
+      <i class="fa fa-apple fa-4x"></i>
+    </a>
+
+  </section>
 
   <div class="wrapper">
 
@@ -13,15 +34,45 @@
 
       <nav>
         <a href="index.html">Home</a>
-        <a href="video.html">Video</a>
+        <a href="media.html">Media</a>
         <a href="shows.html">Shows</a>
+        <a href="collective.html">Collective</a>
+        <a href="merch.html">Merch</a>
         <a href="contact.html">Contact</a>
       </nav>
-      
-    </section> 
+
+    </section>
+
 
     <section class="content">
+
       <h3>Upcoming Gigs</h3>
+
+      <pre>
+        8.10.14 Java Bar (Hosting Jam Session) - Brussels - BE
+        11.10.14 The Gladstone - Lewes - UK
+        12.10.14 The Rose and Crown - Worthing - UK
+        21.10.14 Bar Ville (Hosting Jam Session) - Gent - BE
+        6.11.14 Zebra Bar - Brussels - BE
+
+        Czech Tour
+        18.11.14 - Cross Club - Prague 7 - CZ
+        19.11.14 - Chapeaurouge - Prague 1 - CZ
+        20.11.14 - Red Room - Prague 2 - CZ
+        21.11.14 - TBA
+        22.11.14 - Antikomunist_fest 11 - Lestkov - CZ
+
+        German Tour
+
+        12.2.14 - Achen - DE
+        12.3.14 - TBA - DE
+        12.4.14 - Schokoladen - Berlin - DE
+        12.5.14 - TBA - DE
+        12.6.14 - TBA
+        12.7.14 - TBA
+        12.8.14 - TBA
+        12.9.14 - Fürth - Kofferfabrik -DE
+      </pre>
 
     </section>
 
