--- a/collective.html
+++ b/collective.html
@@ -174,7 +174,7 @@
             <ul><li>Ulf Gjerdingen (swe)</li><li>Saulo Soneghet - (Brz)</li><li>Ruben Lamon - Bass</li></ul>
         </div>
         <div class="list-col">
-            <h4>Guitar Players</h4>
+        <h4>Guitarists</h4>
             <ul><li>Saulo Soneghet (brazil)</li></ul>
         </div>
     </div>
@@ -194,9 +194,9 @@
         </div>
     </div> 
 
-<p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p>
-<h2>Members performed on albums</h2>
-<p>See the <a href="media.html#discography">Discography</a></p>
+    <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p> <p>&nbsp;</p>
+    <h2>Members performed on albums</h2>
+    <p>See the <a href="media.html#discography">Discography</a></p>
 </section>
 
 
