--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
     <a href="https://itunes.apple.com/us/artist/cctv-allstars/id470810963">
       <i class="fa fa-apple fa-4x"></i>
     </a>
-    
+
   </section>
 
   <div class="wrapper">
@@ -46,9 +46,34 @@
 
     <section class="content">
 
-    <p>nopes. nots yets.</p>
+      <h3>Clips</h3>
 
+      <p>
+        Jesus skanking in the name of - Shot in The Gambia.<br />
+        <a href="https://www.youtube.com/watch?v=cwFLXa4vr0U">https://www.youtube.com/watch?v=cwFLXa4vr0U</a>
+      </p>
+
+      <p>
+        Growing my weed -  Shot in Prague<br />
+        <a href="https://www.youtube.com/watch?v=_3WHpgNkEb0">https://www.youtube.com/watch?v=_3WHpgNkEb0</a>
+      </p>
+
+
+      <h3>Live</h3>
+
+      <p>
+        <a href="https://www.youtube.com/watch?v=2khqN0GqSZk">https://www.youtube.com/watch?v=2khqN0GqSZk</a>
+      </p>
+
+      <p>
+        <a href="https://www.youtube.com/watch?v=qg15sx5kN9Y">https://www.youtube.com/watch?v=qg15sx5kN9Y</a>
+      </p>
+
+      <p>
+        <a href="https://www.youtube.com/watch?v=9C3ZesRMVXE">https://www.youtube.com/watch?v=9C3ZesRMVXE</a>
+      </p>
     </section>
+
   </div><!-- wrapper END -->
 
 </body>
