--- a/shows.html
+++ b/shows.html
@@ -46,32 +46,37 @@
 
     <section class="content">
 
-      <h3>Upcoming Gigs</h3>
+      <h3>Upcoming Gigs 2014</h3>
 
       <pre>
-        8.10.14 Java Bar (Hosting Jam Session) - Brussels - BE
-        11.10.14 The Gladstone - Lewes - UK
-        12.10.14 The Rose and Crown - Worthing - UK
-        21.10.14 Bar Ville (Hosting Jam Session) - Gent - BE
-        6.11.14 Zebra Bar - Brussels - BE
+        Belgian Tour
+        08.10     Java Bar (Hosting Jam Session), Brussels, BE
+        11.10     The Gladstone, Lewes, UK
+        12.10     The Rose and Crown, Worthing, UK
+        18.10     El Metteko, Anspachlaan 88, Brussels, BE (Eddy &amp; Ulf duo)
+        21.10     Bar Ville (Hosting Jam Session), Gent, BE
+        06.11     Zebra Bar, Brussels, BE
 
         Czech Tour
-        18.11.14 - Cross Club - Prague 7 - CZ
-        19.11.14 - Chapeaurouge - Prague 1 - CZ
-        20.11.14 - Red Room - Prague 2 - CZ
-        21.11.14 - TBA
-        22.11.14 - Antikomunist_fest 11 - Lestkov - CZ
+        18.11     Cross Club, Prague 7, CZ
+        19.11     Chapeaurouge, Prague 1, CZ
+        20.11     Red Room, Prague 2, CZ
+        21.11     TBA
+        22.11     Antikomunist_fest 11, Lestkov, CZ
+      </pre>
 
+      <h3>Upcoming Gigs 2015</h3>
+      <pre>
         German Tour
+        12.2     Achen, DE
+        12.3     TBA, DE
+        12.4     Schokoladen, Berlin, DE
+        12.5     TBA, DE
+        12.6     TBA, DE
+        12.7     TBA, DE
+        12.8     TBA, DE
+        12.9     Kofferfabrik, Fürth, DE
 
-        12.2.14 - Achen - DE
-        12.3.14 - TBA - DE
-        12.4.14 - Schokoladen - Berlin - DE
-        12.5.14 - TBA - DE
-        12.6.14 - TBA
-        12.7.14 - TBA
-        12.8.14 - TBA
-        12.9.14 - Fürth - Kofferfabrik -DE
       </pre>
 
     </section>
