upping design on elements, content edits and background images

--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@
       </p>  
       <p>
         Eddy Allen - World Adventurer, Composer and Musician - came up with the concept of having his own musical collective. Where by this extended family of musicians rotate around Eddy's somtimes unconventional gigging schedule.
-      </p> 
-      <p>
-        The members of this international crew only grow in numbers as the guys explore new scenes and avenues of music and culture. Eddy has now based himself in Belgium where he is working with some of the guys from Black Mango band, who are all top musicians of the Belgium music circuit.
       </p>
 
       <p>
+        They bring a fusion of Ska, Folk, Rock, Punk, World, Reggae, Funk, Latin, Jazz etc.
+        Expressing a multicultural approach to music but still promising the rocking show expected by any band of this nature. The members of this international crew only grow in numbers as the guys explore new scenes and avenues of music and culture. 
+      </p>
+
+      <p>
+        Eddy has now based himself in Belgium where he is working with some of the guys from Black Mango band, who are all top musicians of the Belgium music circuit. They plan to have their first gig with this line up at the start of next year.
+      </p>
+
+<!--       <p>
         They are:
       </p>
       <ul>
@@ -65,11 +71,7 @@
         <li>Joppe Bestevaar - Baritone Sax</li>
         <li>Ruben Lamon - Bass</li>
       </ul>
-
-      <p>
-        They plan to have their first gig with this line up at the start of next year.
-      </p> 
-
+ -->
       <p>
         Until then...
       </p> 
