--- a/media.html
+++ b/media.html
@@ -48,33 +48,24 @@
 
       <h3>Clips</h3>
 
-      <p>
-        Jesus skanking in the name of - Shot in The Gambia.<br />
-        <a href="https://www.youtube.com/watch?v=cwFLXa4vr0U">https://www.youtube.com/watch?v=cwFLXa4vr0U</a>
-      </p>
+      <p>Jesus skanking in the name of - Shot in The Gambia.</p>
+      <!-- <a href="https://www.youtube.com/watch?v=cwFLXa4vr0U">https://www.youtube.com/watch?v=cwFLXa4vr0U</a> -->
+      <iframe width="600" height="315" src="http://www.youtube.com/embed/cwFLXa4vr0U?rel=0&showinfo=0&autohide=1" frameborder="0" allowfullscreen></iframe>
 
-      <p>
-        Growing my weed -  Shot in Prague<br />
-        <a href="https://www.youtube.com/watch?v=_3WHpgNkEb0">https://www.youtube.com/watch?v=_3WHpgNkEb0</a>
-      </p>
-
+      <p>Growing my weed -  Shot in Prague</p>
+      <iframe width="600" height="315" src="http://www.youtube.com/embed/_3WHpgNkEb0?rel=0&showinfo=0&autohide=1" frameborder="0" allowfullscreen></iframe>
 
       <h3>Live</h3>
 
-      <p>
-        <a href="https://www.youtube.com/watch?v=2khqN0GqSZk">https://www.youtube.com/watch?v=2khqN0GqSZk</a>
-      </p>
+      <iframe width="600" height="315" src="http://www.youtube.com/embed/2khqN0GqSZk?rel=0&showinfo=0&autohide=1" frameborder="0" allowfullscreen></iframe>
 
-      <p>
-        <a href="https://www.youtube.com/watch?v=qg15sx5kN9Y">https://www.youtube.com/watch?v=qg15sx5kN9Y</a>
-      </p>
+      <iframe width="600" height="315" src="http://www.youtube.com/embed/qg15sx5kN9Y?rel=0&showinfo=0&autohide=1" frameborder="0" allowfullscreen></iframe>
+ 
+      <iframe width="600" height="315" src="http://www.youtube.com/embed/9C3ZesRMVXE?rel=0&showinfo=0&autohide=1" frameborder="0" allowfullscreen></iframe>
 
-      <p>
-        <a href="https://www.youtube.com/watch?v=9C3ZesRMVXE">https://www.youtube.com/watch?v=9C3ZesRMVXE</a>
-      </p>
-    </section>
+  </section>
 
-  </div><!-- wrapper END -->
+</div><!-- wrapper END -->
 
 </body>
 </html>
