--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,11 @@
         Twitter:<br />
         <a href="https://twitter.com/cctvallstars">twitter.com/cctvallstars</a>
       </p>
+
+      <p>
+        Jedi (Web)Master:<br />
+        <a href="http://ulf.wz.cz">ulf.gj</a> | pagehead@gmail.com 
+      </p>
     </section>
   </div><!-- wrapper END -->
 
