--- a/shows.html
+++ b/shows.html
@@ -46,39 +46,40 @@
 
     <section class="content">
 
-      <h3>Upcoming Gigs 2014</h3>
+      <h2>Upcoming Gigs 2014</h2>
 
-      <pre>
-        Belgian Tour
-        08.10     Java Bar (Hosting Jam Session), Brussels, BE
-        11.10     The Gladstone, Lewes, UK
-        12.10     The Rose and Crown, Worthing, UK
-        18.10     El Metteko, Anspachlaan 88, Brussels, BE (Eddy &amp; Ulf duo)
-        21.10     Bar Ville (Hosting Jam Session), Gent, BE
-        06.11     Zebra Bar, Brussels, BE
+      <h3>Belgian Tour</h3>
+      <p>08.10 | 20:00 | Java Bar (Hosting Jam Session), Brussels, BE</p>
 
-        Czech Tour
-        18.11     Cross Club, Prague 7, CZ
-        19.11     Chapeaurouge, Prague 1, CZ
-        20.11     Red Room, Prague 2, CZ
-        21.11     TBA
-        22.11     Antikomunist_fest 11, Lestkov, CZ
+      <p>11.10 | The Gladstone, Lewes, UK</p>
+      <p>12.10 | The Rose and Crown, Worthing, UK</p>
+      <p>18.10 | El Metteko, Anspachlaan 88, Brussels, BE (Eddy &amp; Ulf duo)</p>
+      <p>21.10 | Bar Ville (Hosting Jam Session), Gent, BE</p>
+      <p>06.11 | Zebra Bar, Brussels, BE</p>
 
-        German Tour
-        02.12     Achen, DE
-        03.12     TBA, DE
-        04.12     Schokoladen, Berlin, DE
-        05.12     TBA, DE
-        06.12     TBA, DE
-        07.12     TBA, DE
-        08.12     TBA, DE
-        09.12     Kofferfabrik, Fürth, DE
+      <h3>Czech Tour</h3>
+      <p>18.11 | Cross Club, Prague 7, CZ</p>
+      <p>19.11 | Chapeaurouge, Prague 1, CZ</p>
+      <p>20.11 | Red Room, Prague 2, CZ</p>
+      <p>21.11 | TBA</p>
+      <p>22.11 | Antikomunist_fest 11, Lestkov, CZ</p>
 
-      </pre>
+      <h3>German Tour</h3>
 
-    </section>
+      <p>02.12 | Achen, DE</p>
+      <p>03.12 | TBA, DE</p>
+      <p>04.12 | Schokoladen, Berlin, DE</p>
+      <p>05.12 | TBA, DE</p>
+      <p>06.12 | TBA, DE</p>
+      <p>07.12 | TBA, DE</p>
+      <p>08.12 | TBA, DE</p>
+      <p>09.12 | Kofferfabrik, Fürth, DE</p>
 
-  </div><!-- wrapper END -->
+    </code>
+
+  </section>
+
+</div><!-- wrapper END -->
 
 </body>
 </html>
