--- a/shows.html
+++ b/shows.html
@@ -51,11 +51,12 @@
       <h3>Belgian Tour</h3>
       <p>08.10 | 20:00 | Java Bar (Hosting Jam Session), Brussels, BE</p>
 
-      <p>11.10 | The Gladstone, Lewes, UK</p>
+      <p>11.10 | The Gladstone, Lewes Road, Brighton, UK</p>
       <p>12.10 | The Rose and Crown, Worthing, UK</p>
       <p>18.10 | El Metteko, Anspachlaan 88, Brussels, BE (Eddy &amp; Ulf duo)</p>
+      <p>19.10 | El Metteko, Anspachlaan 88, Brussels, BE (Full band)</p>
       <p>21.10 | Bar Ville (Hosting Jam Session), Gent, BE</p>
-      <p>06.11 | Zebra Bar, Brussels, BE</p>
+      <!-- <p>06.11 | Zebra Bar, Brussels, BE</p> -->
 
       <h3>Czech Tour</h3>
       <p>18.11 | Cross Club, Prague 7, CZ</p>
