--- a/collective.html
+++ b/collective.html
@@ -77,7 +77,7 @@
         </div>
         <div class="list-col">
             <h4>Singers</h4>
-            <ul><li>Amber Durrant</li></ul>
+            <ul><li>Amber Durrant</li><li>Mc Mzungu aka Tom Bentley</li></ul> 
         </div>
     </div>
 
