--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
       <p>
         Jedi (Web)Master:<br />
-        <a href="http://ulf.wz.cz">ulf.gj</a> | pagehead@gmail.com 
+        <a href="http://ulf.wz.cz">ulf.gj</a> | egg&fork production | pagehead@gmail.com 
       </p>
     </section>
   </div><!-- wrapper END -->
