--- a/shows.html
+++ b/shows.html
@@ -55,6 +55,7 @@
       <p>19.10 | El Metteko, Anspachlaan 88, Brussels, BE <br />- Full band</p>
       <p>21.10 | Bar Ville (Hosting Jam Session), Gent, BE</p>
       <!-- <p>06.11 | Zebra Bar, Brussels, BE</p> -->
+      <p>13.11 | De Hellekapelle, Zottegem, BE</p>
       <p>29.11 | Cafe Kafka, Brussels, BE <br />- Eddy &amp; Ulf duo</p>
 
       <h3>Czech Tour</h3>
