--- a/index.html
+++ b/index.html
@@ -1,111 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>CCTV ALLSTARS</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
-</head>
-<body>
+---
+layout: default
+---
 
-  <section class="social">
+<p>Eddy Allen and the CCTV Allstars are an International music-collective that has been playing around the world since 2006. They have toured The UK, Germany, The Czech Republic, Ireland, Holland, Austria, Italy, France, Spain, Mexico, The USA, Belgium, The Gambia and Brazil.</p>
 
-    <a href="https://twitter.com/cctvallstars" title="twitter">
-      <i class="fa fa-twitter fa-4x"></i>
-    </a>
-    <a href="https://www.facebook.com/pages/CCTV-Allstars/56434708600?fref=ts" title="facebook">
-      <i class="fa fa-facebook-square fa-4x"></i>
-    </a>
-    <a href="https://www.youtube.com/channel/UCTKWpROglhDnL9cQNt6dhcA">
-      <i class="fa fa-youtube-square fa-4x"></i>
-    </a>
-    <a href="https://soundcloud.com/cctvallstars">
-      <i class="fa fa-soundcloud fa-4x"></i>
-    </a>
-    <a href="https://itunes.apple.com/us/artist/cctv-allstars/id470810963">
-      <i class="fa fa-apple fa-4x"></i>
-    </a>
-    
-  </section>
+<p>Eddy Allen (world adventurer, composer, musician and self-styled Don Juan) came up with the concept of having his own musical collective whereby an extended family of musicians rotate around Eddy's often busy and always unconventional gigging schedule.</p>
 
-  <div class="wrapper">
+<p>The Allstars create a fusion of Ska, Folk, Rock, Punk, World, Reggae, Funk, Latin and Jazz and present a multicultural approach to their music. Their shows are energetic and exciting and they promise to deliver a rocking performance designed to open your heart, get your head bobbing and your dancing feet moving!</p>
 
-    <section class="menu">
+<p>Currently based in Prague and presently recording new music!</p>
+<p>EP <em>"Young Free Single"</em> to be released in May 2015.</p>
 
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="media.html">Media</a>
-        <a href="shows.html">Shows</a>
-        <a href="collective.html">Collective</a>
-        <a href="merch.html">Merch</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-
-    </section>
-
-
-    <section class="content">
-
-
-<!--      <p>
-        Eddy Allen and the CCTV Allstars International collective have been playing around world since 2006. They have toured in, UK, Germany, Czech Republic, Ireland, Holland, Austria, Italy, France, Spain, Mexico, USA, Belgium, The Gambia and Brazil.
-      </p>  
-      <p>
-        Eddy Allen - World Adventurer, Composer and Musician - came up with the concept of having his own musical collective. Where by this extended family of musicians rotate around Eddy's somtimes unconventional gigging schedule.
-      </p>
-
-      <p>
-        They bring a fusion of Ska, Folk, Rock, Punk, World, Reggae, Funk, Latin, Jazz etc.
-        Expressing a multicultural approach to music but still promising the rocking show expected by any band of this nature. The members of this international crew only grow in numbers as the guys explore new scenes and avenues of music and culture. 
-      </p>
-
-      <p>
-        Eddy has now based himself in Belgium where he is working with some of the guys from Black Mango band, who are all top musicians of the Belgium music circuit. They plan to have their first gig with this line up at the start of next year.
-      </p>
-
-<!~~       <p>
-        They are:
-      </p>
-      <ul>
-        <li>Toni Vitacolonna - Drums</li>
-        <li>Peter Delannoye - Trombone</li>
-        <li>Sam Joris - Trumpet</li>
-        <li>Joppe Bestevaar - Baritone Sax</li>
-        <li>Ruben Lamon - Bass</li>
-      </ul>
- ~~>
-      <p>
-        Until then...
-      </p> 
-
-      <p>
-        Eddy Allen and the CCTV Allstars Collective are touring the EU until the end of the year 2014 with upcoming gigs in Belgium, Germany, Holland, Czech Republic, France and the UK.
-      </p>
-    -->
-
-
-    <p>Eddy Allen and the CCTV Allstars are an International music-collective that has been playing around the world since 2006. They have toured The UK, Germany, The Czech Republic, Ireland, Holland, Austria, Italy, France, Spain, Mexico, The USA, Belgium, The Gambia and Brazil.</p>
-
-    <p>Eddy Allen (world adventurer, composer, musician and self-styled Don Juan) came up with the concept of having his own musical collective whereby an extended family of musicians rotate around Eddy's often busy and always unconventional gigging schedule.</p>
-
-    <p>The Allstars create a fusion of Ska, Folk, Rock, Punk, World, Reggae, Funk, Latin and Jazz and present a multicultural approach to their music. Their shows are energetic and exciting and they promise to deliver a rocking performance designed to open your heart, get your head bobbing and your dancing feet moving!</p>
-
-    <p>Currently based in Prague and presently recording new music!</p>
-    <p>EP <em>"Young Free Single"</em> to be released in May 2015.</p>
-
-    <h3>Eddy Allen and the CCTV Allstars aka Friends with Benefits:</3>
-      <p></p>
-      <ul>
-        <li>Eddy Allen (UK) - Guitar, Vox and Percussion</li>
-        <li>Tomas Knotek (CZ) - Drums and Machines</li>
-        <li>Anton Kuznetsov (RUS) - Bass and Vox</li>
-        <li>Ego L. Din (CAN) -  Latin/Afro Percussion and Vox</li>
-        <li>Mara Prokop (CZ) - Sax and Percussion</li>
-        <li>Honza Super Czech (CZ) - Trombone and Percussion</li>
-      </ul>
-
-    </section>
-  </div><!-- wrapper END -->
-
-</body>
-</html>
+<h3>Eddy Allen and the CCTV Allstars aka Friends with Benefits:</3>
+  <p></p>
+  <ul>
+    <li>Eddy Allen (UK) - Guitar, Vox and Percussion</li>
+    <li>Tomas Knotek (CZ) - Drums and Machines</li>
+    <li>Anton Kuznetsov (RUS) - Bass and Vox</li>
+    <li>Ego L. Din (CAN) -  Latin/Afro Percussion and Vox</li>
+    <li>Mara Prokop (CZ) - Sax and Percussion</li>
+    <li>Honza Super Czech (CZ) - Trombone and Percussion</li>
+  </ul>
