--- a/merch.html
+++ b/merch.html
@@ -1,55 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>CCTV ALLSTARS</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
-</head>
-<body>
-
-  <section class="social">
-
-    <a href="https://twitter.com/cctvallstars" title="twitter">
-      <i class="fa fa-twitter fa-4x"></i>
-    </a>
-    <a href="https://www.facebook.com/pages/CCTV-Allstars/56434708600?fref=ts" title="facebook">
-      <i class="fa fa-facebook-square fa-4x"></i>
-    </a>
-    <a href="https://www.youtube.com/channel/UCTKWpROglhDnL9cQNt6dhcA">
-      <i class="fa fa-youtube-square fa-4x"></i>
-    </a>
-    <a href="https://soundcloud.com/cctvallstars">
-      <i class="fa fa-soundcloud fa-4x"></i>
-    </a>
-    <a href="https://itunes.apple.com/us/artist/cctv-allstars/id470810963">
-      <i class="fa fa-apple fa-4x"></i>
-    </a>
-    
-  </section>
-
-  <div class="wrapper">
-
-    <section class="menu">
-
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="media.html">Media</a>
-        <a href="shows.html">Shows</a>
-        <a href="collective.html">Collective</a>
-        <a href="merch.html">Merch</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-
-    </section>
-
-
-    <section class="content">
-
-    <p>nopes. nots yets.</p>
-
-    </section>
-  </div><!-- wrapper END -->
-
-</body>
-</html>
+---
+layout: default
+---
+<p>nopes. nots yets.</p>
