--- a/shows.html
+++ b/shows.html
@@ -1,52 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>CCTV ALLSTARS</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
-</head>
-<body>
+---
+layout: default
+---
 
-  <section class="social">
-
-    <a href="https://twitter.com/cctvallstars" title="twitter">
-      <i class="fa fa-twitter fa-4x"></i>
-    </a>
-    <a href="https://www.facebook.com/pages/CCTV-Allstars/56434708600?fref=ts" title="facebook">
-      <i class="fa fa-facebook-square fa-4x"></i>
-    </a>
-    <a href="https://www.youtube.com/channel/UCTKWpROglhDnL9cQNt6dhcA">
-      <i class="fa fa-youtube-square fa-4x"></i>
-    </a>
-    <a href="https://soundcloud.com/cctvallstars">
-      <i class="fa fa-soundcloud fa-4x"></i>
-    </a>
-    <a href="https://itunes.apple.com/us/artist/cctv-allstars/id470810963">
-      <i class="fa fa-apple fa-4x"></i>
-    </a>
-
-  </section>
-
-  <div class="wrapper">
-
-    <section class="menu">
-
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="media.html">Media</a>
-        <a href="shows.html">Shows</a>
-        <a href="collective.html">Collective</a>
-        <a href="merch.html">Merch</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-
-    </section>
-
-
-    <section class="content">
-
-<!--      <h2>Upcoming Gigs 2014</h2>
+<!--
+<h2>Upcoming Gigs 2014</h2>
 
       <p>08.10 | 20:00 | Java Bar (Hosting Jam Session), Brussels, BE</p>
       <p>11.10 | The Gladstone, Lewes Road, Brighton, UK</p>
@@ -76,28 +33,25 @@
       <p>08.12 | TBA, DE</p>
       <p>09.12 | Kofferfabrik, Fürth, DE</p>-->
 
+
       <h2>Upcoming Gigs 2015</h2>
 
       <h3>April 2015</h3>
-      <p>03.4 | Friedland, Endstation - DE</p>
-      <p>04.4 | Berlin, Tommy Weisbecker Haus - DE</p>
-      <p>11.4 | Prague, Kamp Park - CZ</p>
-      <p>16.4 | Prague, La Loca - CZ</p>
-      <p>17.4 | Grebin, Die Hofkneipe - DE</p>
-      <p>18.4 | Flensburg, Tableau Kulturcafé - DE</p>
-      <p>24.4 | Prague, Akropolis (With Ting Album Release Party) - CZ</p>
+      <code>
+        <p>03.4 | Friedland, Endstation - DE</p>
+        <p>04.4 | Berlin, Tommy Weisbecker Haus - DE</p>
+        <p>11.4 | Prague, Kamp Park - CZ</p>
+        <p>16.4 | Prague, La Loca - CZ</p>
+        <p>17.4 | Grebin, Die Hofkneipe - DE</p>
+        <p>18.4 | Flensburg, Tableau Kulturcafé - DE</p>
+        <p>24.4 | Prague, Akropolis (With Ting Album Release Party) - CZ</p>
+      </code>
 
       <h3>May 2015</h3>
-      <p>08.5 | Prague, Million Marihuana March - CZ</p>
-
+      <code>
+        <p>08.5 | Prague, Million Marihuana March - CZ</p>
+      </code>
       <h3>June 2015</h3>
-      <p>16.4 | Prague, Cross Club - CZ</p>
-
-    </code>
-
-  </section>
-
-</div><!-- wrapper END -->
-
-</body>
-</html>
+      <code>
+        <p>16.4 | Prague, Cross Club - CZ</p>
+      </code>
