--- a/video.html
+++ b/video.html
@@ -1,80 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>CCTV ALLSTARS</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
-</head>
-<body>
+---
+layout: default
+---
 
-  <section class="social">
+<h3>Clips</h3>
 
-    <a href="https://twitter.com/cctvallstars" title="twitter">
-      <i class="fa fa-twitter fa-4x"></i>
-    </a>
-    <a href="https://www.facebook.com/pages/CCTV-Allstars/56434708600?fref=ts" title="facebook">
-      <i class="fa fa-facebook-square fa-4x"></i>
-    </a>
-    <a href="https://www.youtube.com/channel/UCTKWpROglhDnL9cQNt6dhcA">
-      <i class="fa fa-youtube-square fa-4x"></i>
-    </a>
-    <a href="https://soundcloud.com/cctvallstars">
-      <i class="fa fa-soundcloud fa-4x"></i>
-    </a>
-    <a href="https://itunes.apple.com/us/artist/cctv-allstars/id470810963">
-      <i class="fa fa-apple fa-4x"></i>
-    </a>
+<p>
+  Jesus skanking in the name of - Shot in The Gambia.<br />
+  <a href="https://www.youtube.com/watch?v=cwFLXa4vr0U">https://www.youtube.com/watch?v=cwFLXa4vr0U</a>
+</p>
 
-  </section>
-
-  <div class="wrapper">
-
-    <section class="menu">
-
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="media.html">Media</a>
-        <a href="shows.html">Shows</a>
-        <a href="collective.html">Collective</a>
-        <a href="merch.html">Merch</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-
-    </section>
+<p>
+  Growing my weed -  Shot in Prague<br />
+  <a href="https://www.youtube.com/watch?v=_3WHpgNkEb0">https://www.youtube.com/watch?v=_3WHpgNkEb0</a>
+</p>
 
 
-    <section class="content">
+<h3>Live</h3>
 
-      <h3>Clips</h3>
+<p>
+  <a href="https://www.youtube.com/watch?v=2khqN0GqSZk">https://www.youtube.com/watch?v=2khqN0GqSZk</a>
+</p>
 
-      <p>
-        Jesus skanking in the name of - Shot in The Gambia.<br />
-        <a href="https://www.youtube.com/watch?v=cwFLXa4vr0U">https://www.youtube.com/watch?v=cwFLXa4vr0U</a>
-      </p>
+<p>
+  <a href="https://www.youtube.com/watch?v=qg15sx5kN9Y">https://www.youtube.com/watch?v=qg15sx5kN9Y</a>
+</p>
 
-      <p>
-        Growing my weed -  Shot in Prague<br />
-        <a href="https://www.youtube.com/watch?v=_3WHpgNkEb0">https://www.youtube.com/watch?v=_3WHpgNkEb0</a>
-      </p>
-
-
-      <h3>Live</h3>
-
-      <p>
-        <a href="https://www.youtube.com/watch?v=2khqN0GqSZk">https://www.youtube.com/watch?v=2khqN0GqSZk</a>
-      </p>
-
-      <p>
-        <a href="https://www.youtube.com/watch?v=qg15sx5kN9Y">https://www.youtube.com/watch?v=qg15sx5kN9Y</a>
-      </p>
-
-      <p>
-        <a href="https://www.youtube.com/watch?v=9C3ZesRMVXE">https://www.youtube.com/watch?v=9C3ZesRMVXE</a>
-      </p>
-    </section>
-
-  </div><!-- wrapper END -->
-
-</body>
-</html>
+<p>
+  <a href="https://www.youtube.com/watch?v=9C3ZesRMVXE">https://www.youtube.com/watch?v=9C3ZesRMVXE</a>
+</p>
