updated members list

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ layout: default
     <li>Anton Kuznetsov (RUS) - Bass and Vox</li>
     <li>Ego L. Din (CAN) -  Latin/Afro Percussion and Vox</li>
     <li>Mara Prokop (CZ) - Sax and Percussion</li>
-    <li>Honza Super Czech (CZ) - Trombone and Percussion</li>
+    <li>Jan Šatra (CZ) - Trombone and Percussion</li>
   </ul>
