--- a/shows.html
+++ b/shows.html
@@ -10,12 +10,18 @@ layout: default
 <code>
   {% for concert in site.data.concerts %}
     {% if concert.year >= current_year %}
-    <p style="line-height:.4em; {% if concert.cancelled == true %} text-decoration: line-through; color: #F00{% endif %}">
+    <p style="line-height:.4em;">
       {{ concert.concert }}
 
         {% if concert.meta %}
           | <span style="font-size:80%; {% if concert.meta == 'TBA' %} color:#d5cb01;{% endif %}">{{ concert.meta }}</span>
         {% endif %}
+
+        {% if concert.status %}
+          | <span style="font-size:80%; {% if concert.status == 'Cancelled' %} color: #F00;{% endif %}">{{ concert.status }}</span>
+        {% endif %}
+
+
 
     {% endif %}
   </p>
