front page content updates

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<h3>Eddy Allen (UK)</h3>
+<p>Together with members of the CCTV Allstars international collective! Back again in their many forms to bring to you a message of unity through the art of music. Their tools, wood, metal and plastic, produce an impact that must be felt live to understand its gathered abstract force.
+With a spirit that is hard to reckon with, Eddy plays each gig as if it were his last.
+Following the lead of this "cats out the bag"-performance the guys have no choice but to pave the way for a nonstop dancing frenzy.</p>
+
+<p>&rsaquo; <a href="http://uloz.to/xHWWfckU/cctv-audience-mic-rough-m4a" target="_blank">Live at MMM Prague!!</a></p>
+
 <p>Eddy Allen and the CCTV Allstars are an International music-collective that has been playing around the world since 2006. They have toured The UK, Germany, The Czech Republic, Ireland, Holland, Austria, Italy, France, Spain, Mexico, The USA, Belgium, The Gambia and Brazil.</p>
 
 <p>Eddy Allen (world adventurer, composer, musician and self-styled Don Juan) came up with the concept of having his own musical collective whereby an extended family of musicians rotate around Eddy's often busy and always unconventional gigging schedule.</p>
@@ -10,9 +17,8 @@ layout: default
 
 <p>Currently based in Prague and presently recording new music!</p>
 
-<h3>Eddy Allen and the CCTV Allstars aka Friends with Benefits:</3>
-  <p></p>
-  <ul>
+<h3 style="border-bottom: 3px solid #d5cb01; padding-bottom: 3px;">Eddy Allen and the CCTV Allstars aka Friends with Benefits:</h3>
+  <ul style="color: #d5cb01;">
     <li>Eddy Allen (UK) - Guitar, Vox and Percussion</li>
     <li>Tomas Knotek (CZ) - Drums and Machines</li>
     <li>Anton Kuznetsov (RUS) - Bass and Vox</li>
