bass player update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Following the lead of this "cats out the bag"-performance the guys have no choic
   <ul style="color: #d5cb01;">
     <li>Eddy Allen (UK) - Guitar, Vox and Percussion</li>
     <li>Tomas Knotek (CZ) - Drums and Machines</li>
-    <li>Anton Kuznetsov (RUS) - Bass and Vox</li>
+    <li>Matěj Havlíček (CZ) - Bass Guitar</li>
     <li>Ego L. Din (CAN) -  Latin/Afro Percussion and Vox</li>
     <li>Mara Prokop (CZ) - Sax and Percussion</li>
     <li>Jan Šatra (CZ) - Trombone and Percussion</li>
