--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
+<h3>Crowdfunding is up and running for Amps4Africa!!</h3>
+<!-- crowdfunder widget for amps4africa -->
+    <div style="position:relative;">
+        <div style="margin: 0 auto; width: 400px;">
+            <script src="https://www.crowdfunder.co.uk/amps-4-africa-first-trip/widget.js/" type="text/javascript"></script>
+        </div>
+    </div>
+
 <h3>Eddy Allen (UK)</h3>
 <p>Together with members of the CCTV Allstars international collective! Back again in their many forms to bring to you a message of unity through the art of music. Their tools, wood, metal and plastic, produce an impact that must be felt live to understand its gathered abstract force.
 With a spirit that is hard to reckon with, Eddy plays each gig as if it were his last.
