hiding current member list

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Following the lead of this "cats out the bag"-performance the guys have no choic
 
 <p>The Allstars create a fusion of Ska, Folk, Rock, Punk, World, Reggae, Funk, Latin and Jazz and present a multicultural approach to their music. Their shows are energetic and exciting and they promise to deliver a rocking performance designed to open your heart, get your head bobbing and your dancing feet moving!</p>
 
-<p>Currently based in Prague and presently recording new music!</p>
+<!-- <p>Currently based in Prague and presently recording new music!</p>
 
 <h3 style="border-bottom: 3px solid #d5cb01; padding-bottom: 3px;">Eddy Allen and the CCTV Allstars aka Friends with Benefits:</h3>
   <ul style="color: #d5cb01;">
@@ -35,4 +35,4 @@ Following the lead of this "cats out the bag"-performance the guys have no choic
     <li>Ego L. Din (CAN) -  Latin/Afro Percussion and Vox</li>
     <li>Mara Prokop (CZ) - Sax and Percussion</li>
     <li>Jan Šatra (CZ) - Trombone and Percussion</li>
-  </ul>
+  </ul> -->
